--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -107,3 +107,16 @@ header {
     height: 100%;
     object-fit: cover; /* Corta e ajusta a imagem para preencher o contêiner */
 }
+
+.product-card {
+    width: 22rem;
+}
+.product-list {
+    justify-content: space-between;
+    column-gap: 1rem;
+}
+@media (max-width: 1280px) {
+    .product-list {
+      justify-content: flex-start; /* Alinha os itens à esquerda */
+    }
+  }
