--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -33,7 +33,7 @@ header {
     top: -2.5px;
 }
 
-.main-padding {
+.shopping-page-padding {
     padding-left: 6rem;
     padding-right: 6rem;
 }
@@ -56,6 +56,12 @@ header {
 .inn-shadow {
     box-shadow: inset 0 4px 15px rgba(0, 0, 0, 0.2);
 }
+
+.inn-shadow {
+    box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.2);
+}
+
+
 .w-30 {
     width: 30%;
 }
@@ -101,7 +107,45 @@ header {
     height: 192px;
     overflow: hidden;
 }
-  
+.card-img-container-vertical {
+    /* width: 100%; */
+    height: 100%;
+    overflow: hidden;
+}
+ 
+.order-img {
+    max-height: 131px ;
+    width: auto;
+    overflow: hidden;
+}
+
+.order-card {
+    max-height: 9rem; 
+    max-width: 43rem;
+    overflow: hidden;
+}
+
+.order-badge {
+    background-color: #F8F9FA;
+}
+.order-spinner {
+    border-color: #DEE2E6 !important;
+    
+}
+
+.order-spinner:hover {
+    background-color: #2d2d2d !important;
+    color: #DEE2E6 !important;
+}
+.order-badge-container {
+    min-width: 6.4rem;
+    min-height: 100%;
+}
+
+.order-main-content {
+    min-width: 18rem; 
+}
+
 .card-img-container img {
     width: 100%;
     height: 100%;
@@ -111,18 +155,42 @@ header {
 .product-card {
     width: 22rem;
 }
-.product-list {
+/* .order-list {
     justify-content: space-between;
     column-gap: 1rem;
-}
+} */
 
 
 footer {
     justify-self: end;
     min-height: 40px;
 }
-@media (max-width: 1280px) {
+
+.cartPage {
+    max-width: 50rem;
+}
+
+@media only screen and (max-width: 1280px) {
     .product-list {
-      justify-content: flex-start; /* Alinha os itens à esquerda */
+        justify-content: flex-start; /* Alinha os itens à esquerda */
+        column-gap: 3rem;
     }
-  }
+}
+
+@media only screen and (max-width: 944px) {
+    .product-list {
+        justify-content: center; /* Alinha os itens à esquerda */
+       
+    }
+    .product-card {
+        width: 30rem;
+    }
+    .min-h-15rem {
+        min-height: 20rem;
+    }
+    .h-15rem {
+        height: 20rem;
+    }
+}
+
+
