--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -170,19 +170,19 @@ footer {
 }
 
 .product-list {
-    
-    justify-content: start
+    grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
+    row-gap: 20px;
 }
-@media only screen and (max-width: 1280px) {
+/* @media only screen and (max-width: 1280px) {
     .product-list {
-        justify-content: flex-start; /* Alinha os itens à esquerda */
+        justify-content: flex-start; 
         column-gap: 3rem;
     }
 }
 
 @media only screen and (max-width: 944px) {
     .product-list {
-        justify-content: center; /* Alinha os itens à esquerda */
+        justify-content: center; 
        
     }
     .product-card {
@@ -194,6 +194,6 @@ footer {
     .h-15rem {
         height: 20rem;
     }
-}
+} */
 
 
