--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -170,7 +170,16 @@ header {
     column-gap: 1rem;
 } */
 .address-input {
+    min-width: 29rem;
     width: 29rem;
+}
+
+.paymentMethodDropDown {
+    width: 100%;
+}
+
+.pb-10 {
+    padding-bottom: 10rem !important;
 }
 
 footer {
