--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -161,6 +161,26 @@ header {
 .product-card {
     width: 22rem;
 }
+.banner {
+    position: relative;
+}
+.banner-justification {
+    justify-content: space-between;
+    height: 15rem;
+    min-height: 15rem;
+}
+
+.banner-img-container {
+    position: absolute;
+    max-width: 100%;
+    width: 100%;
+    min-width: 100%;
+    left: -110px;
+}
+.banner h2 {
+    position: absolute;
+    left: 13rem;
+}
 
 .pointer {
     cursor: pointer;
@@ -190,10 +210,54 @@ footer {
 .cartPage {
     max-width: 50rem;
 }
-
+header {
+    min-height: 4rem;
+}
 .product-list {
     grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
     row-gap: 20px;
+}
+
+@media only screen and (max-width: 950px) {
+    .product-list {
+        grid-template-columns: repeat(1, 100%);
+    }
+    .product-card {
+        width: 100%;
+        min-width: 100% !important;
+    }
+    .card-img-container {
+        width: 100%;
+        height: 15rem;
+        overflow: hidden;
+    }
+
+
+    .banner-justification {
+        justify-content: center !important;
+    }
+}
+
+@media only screen and (max-width: 660px) {
+    .shopping-page-padding {
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
+    }
+
+    
+}
+
+@media only screen and (max-width: 490px) {
+    .fs-2rem {
+        font-size: 1.6rem;
+    }
+    .banner-img-container {
+        left: -150px;
+    }
+    .banner h2 {
+        left: 140px;
+        right: 70px;
+    }
 }
 /* @media only screen and (max-width: 1280px) {
     .product-list {
